che-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: che
  name: che
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: che
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        pod.alpha.kubernetes.io/init-containers: '[{"image":"busybox","imagePullPolicy":"IfNotPresent","name":"fmp-volume-permission","command":["chmod","777","/data"],"volumeMounts":[{"mountPath":"/data","name":"che-data-volume"}]}]'
      labels:
        app: che
    spec:
      containers:
        - name: che
          image: eclipse/che-server:nightly
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /api/system/state
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 120
            timeoutSeconds: 10
          ports:
          - containerPort: 8080
            name: http
          - containerPort: 8000
            name: http-debug
          - containerPort: 8888
            name: jgroups-ping
          readinessProbe:
            httpGet:
              path: /api/system/state
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            timeoutSeconds: 60
          resources:
            limits:
              memory: 600Mi
            requests:
              memory: 256Mi
          volumeMounts:
          - mountPath: /data
            name: che-data-volume
      serviceAccountName: che
      volumes:
      - name: che-data-volume
#         persistentVolumeClaim:
#           claimName: che-data-volume
        emptyDir: {}
