che-keycloak.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "keycloak"
spec:
  ports:
  - name: "5050"
    port: 5050
    targetPort: 8080
  - name: "https"
    port: 5051
    targetPort: 8443
  selector:
    app: keycloak
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: keycloak
  name: keycloak
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - env:
        - name: POSTGRES_PORT_5432_TCP_ADDR
          value: postgres-che
        - name: POSTGRES_PORT_5432_TCP_PORT
          value: "5432"
        - name: POSTGRES_DATABASE
          value: keycloak
        - name: POSTGRES_USER
          value: keycloak
        - name: POSTGRES_PASSWORD
          value: keycloak
        - name: KEYCLOAK_USER
          value: admin-che
        - name: KEYCLOAK_PASSWORD
          value: admin-che
        - name: CHE_HOST
<<<<<<< HEAD
          value: ab6fdaa30a9bd11e8836a02fb6b9cd9d-1575434308.ap-south-1.elb.amazonaws.com
        - name: ROUTING_SUFFIX
          value: ab6fdaa30a9bd11e8836a02fb6b9cd9d-1575434308.ap-south-1.elb.amazonaws.com
=======
          value: a55ecb0a5ab5f11e895a102fb6b9cd9d-1275764020.ap-south-1.elb.amazonaws.com
        - name: ROUTING_SUFFIX
          value: a55ecb0a5ab5f11e895a102fb6b9cd9d-1275764020.ap-south-1.elb.amazonaws.com
>>>>>>> 549a22e1d72dea4a34434f9a8855370ba60f3178
        - name: NAMESPACE
          value: ethan
        - name: PROTOCOL
          value: http
        - name: PROXY_ADDRESS_FORWARDING
          value: "true"
        image: eclipse/che-keycloak:nightly
        command: ["/bin/sh"]
        args: ["-c", "/scripts/kc_realm_user.sh; /opt/jboss/keycloak/bin/kcadm.sh config credentials --server http://localhost:8080/auth --realm master --user admin-che --password admin-che; /opt/jboss/keycloak/bin/kcadm.sh update realms/master -s sslRequired=NONE"]
        imagePullPolicy: Always
        name: keycloak
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: 1536Mi
          requests:
            memory: 1024Mi
        volumeMounts:
        - mountPath: /opt/jboss/keycloak/standalone/data
          name: keycloak-data
      restartPolicy: Always
      serviceAccountName: che-keycloak
      volumes:
      - name: keycloak-data
        persistentVolumeClaim:
          claimName: keycloak-data
