che-postgres.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: postgres-che
  name: postgres-che
spec:
  replicas: 1
  template:
    metadata:
      labels:
        io.kompose.service: postgres-che
    spec:
      securityContext:
        runAsUser: 26
        fsGroup: 26
      containers:
      - env:
        - name: POSTGRESQL_USER
          value: keycloak
        - name: POSTGRESQL_PASSWORD
          value: keycloak
        - name: POSTGRESQL_DATABASE
          value: keycloak
        - name: "CHE_POSTGRES_USERNAME"
          value: "pgche"
        - name: "CHE_POSTGRES_PASSWORD"
          value: "pgchepassword"
        - name: "CHE_POSTGRES_DATABASE"
          value: "dbche"
        image: eclipse/che-postgres:6.13.0
        securityContext:
          runAsUser: 26
        imagePullPolicy: Always
        name: postgres
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 5432
          timeoutSeconds: 1
        readinessProbe:
          exec:
            command:
            - bash
            - -c
            - psql -h 127.0.0.1 -U ${POSTGRESQL_USER} -q -d $POSTGRESQL_DATABASE -c "SELECT 1"
          failureThreshold: 10
          initialDelaySeconds: 5
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 1
        ports:
        - containerPort: 5432
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/pgsql/data
          name: postgres-data
      restartPolicy: Always
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-che-data
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: postgres-che
  name: postgres-che
spec:
  ports:
  - name: "5432"
    port: 5432
    targetPort: 5432
  selector:
    io.kompose.service: postgres-che
