che-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: che
  name: che-host
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: che
#  type:
#    NodePort
