che-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: che-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
spec:
  rules:
  - host: 192.168.99.100.nip.io
    http:
      paths:
      - backend:
          serviceName: che-host
          servicePort: 8080
